# sluice

./: .gitignore  Architecture.md  CONTRIBUTING.md  Dockerfile  LICENSE  POC_PLAN.md  README.md  SECURITY.md  config.yaml.example  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
docs/: adoption.md  demo-recording.md  detectors.md  guide.md
docs/adr/: 0001-typer-for-cli.md  0002-first-match-policy.md  0003-aiosqlite-for-audit.md  0004-stdio-session-id.md  0005-pypi-name.md  0006-tool-poisoning-scope.md  0007-dashboard-jinja-over-htmx.md  0008-preset-precedence-by-position.md  0009-docker-base-image.md  README.md
docs/architecture/: v0.1.md  v0.2.md
docs/assets/: README.md  demo_new.mov
docs/history/: v0.1-retrospective.md
docs/releases/: v0.3.0.md  v0.3.3.md
examples/claude-desktop/: config.json
scripts/: demo.sh
sluice/: __main__.py
sluice/audit/: __init__.py  otel.py  sink.py  sqlite.py  stdout.py
sluice/bench/: latency.py
sluice/cli/: main.py  presets.py
sluice/config/: loader.py  migrate.py  presets.py  schema.py
sluice/dashboard/: app.py
sluice/dashboard/static/: style.css
sluice/dashboard/templates/: events.html  overview.html  sessions.html
sluice/detectors/: base.py  pii.py  prompt_injection.py  secrets.py  tool_poisoning.py
sluice/policy/: engine.py
sluice/policy/presets/: brave-search.yaml  filesystem.yaml  github.yaml  postgres.yaml  slack.yaml
sluice/proxy/: forwarder.py  models.py  pipeline.py  router.py
sluice/proxy/transports/: base.py  http.py  stdio.py  streamable_http.py
sluice/session/: provenance.py  store.py  taint.py
tests/: test_config.py  test_pii.py  test_proxy.py  test_redact_ordering.py  test_secrets_redact.py  test_stdio_correlation.py  test_taint.py  test_taint_policy.py  test_tool_poisoning.py  test_v03_features.py
tests/integration/: mock_mcp_server.py  test_e2e.py  test_filesystem_mcp.py
