[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sluice"
version = "0.1.0"
description = "A local gate for MCP traffic with cross-call memory for sensitive values."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
keywords = ["mcp", "agents", "security", "proxy", "audit"]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "structlog>=24.1.0",
    "typer>=0.12.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
sluice = "sluice.cli.main:app"

[project.entry-points."sluice.detectors"]
secrets = "sluice.detectors.secrets:SecretsDetector"
pii = "sluice.detectors.pii:PIIDetector"
tool_poisoning = "sluice.detectors.tool_poisoning:ToolPoisoningDetector"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27.0", "ruff>=0.4.0"]

[tool.hatch.build.targets.wheel]
packages = ["sluice"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

