[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sluice-taint"
version = "0.1.0"
description = "A local gate for MCP traffic with cross-call memory for sensitive values."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
keywords = ["mcp", "agents", "security", "proxy", "audit"]
authors = [{ name = "krishyaid-coder" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "structlog>=24.1.0",
    "typer>=0.12.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
sluice = "sluice.cli.main:app"

[project.entry-points."sluice.detectors"]
secrets = "sluice.detectors.secrets:SecretsDetector"
pii = "sluice.detectors.pii:PIIDetector"
tool_poisoning = "sluice.detectors.tool_poisoning:ToolPoisoningDetector"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27.0", "ruff>=0.4.0"]

[tool.hatch.build.targets.wheel]
packages = ["sluice"]

[project.urls]
Homepage = "https://github.com/krishyaid-coder/sluice"
Repository = "https://github.com/krishyaid-coder/sluice"
Issues = "https://github.com/krishyaid-coder/sluice/issues"
PyPI = "https://pypi.org/project/sluice-taint/"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

